src/objects/AQMEN__c.object
<CustomObject>
    <fields>
        <fullName>Lab_2_Irrigation_Pump__c</fullName>
        <label>AF: Lab #2 - Irrigation Pump</label>
        <picklist>
            <picklistValues>
                <fullName>St. Jude Medical Cool Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosense Webster CoolFlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific CircuCool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotronik Qiona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osypka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab_3_Irrigation_Pump__c</fullName>
        <label>AF: Lab #3 - Irrigation Pump</label>
        <picklist>
            <picklistValues>
                <fullName>St. Jude Medical Cool Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosense Webster CoolFlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific CircuCool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotronik Qiona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osypka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDTCryoIrriAdvAblationCatheters__c</fullName>
        <label>AF: MDT Cryo Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDTOtherIrriAdvAblationCatheters__c</fullName>
        <label>AF: MDT Other Irri/Adv Abl Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDTStandardAblationCatheters__c</fullName>
        <label>AF: MDT Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDT_Cryo_Irri_Adv_Ablation_Catheter_Sh__c</fullName>
        <formula>MDTCryoIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: MDT Cryo Irri/Adv Abl Catheter % Sh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_Other_Irri_Adv_Ablation_Cath_Share__c</fullName>
        <formula>MDTOtherIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: MDT Other Irri/Adv Abl Cath % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_Standard_Ablation_Catheter_Share__c</fullName>
        <formula>MDTStandardAblationCatheters__c /Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: MDT Standard Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>More_Details__c</fullName>
        <formula>HYPERLINK(Id , &quot;More Details&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>More Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NavXProcedures__c</fullName>
        <label>AF: NavX Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NavX_Share__c</fullName>
        <formula>NavXProcedures__c / Total_Procedures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: NavX % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NonAFAblationswithMappingSystems__c</fullName>
        <label>AF: % Non-AF Ablations with Map Systems</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NonAFVTAblations__c</fullName>
        <label>AF: # Non-AF/VT Ablations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherIrriAdvAblationCatheters__c</fullName>
        <label>AF: Other Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherProcedures__c</fullName>
        <label>AF: Other Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherStandardAblationCatheters__c</fullName>
        <label>AF: Other Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Irri_Adv_Ablation_Catheter_Share__c</fullName>
        <formula>OtherIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Other Irri/Adv Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Share__c</fullName>
        <formula>OtherProcedures__c /Total_Procedures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Other % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Standard_Ablation_Catheter_Share__c</fullName>
        <formula>OtherStandardAblationCatheters__c /Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Other Standard Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>AF: Other</label>
        <picklist>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_of_HV_Trad_that_is_dual_chamber__c</fullName>
        <label>CRM: % of HV-Trad that is dual chamber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_LV_Trad_that_is_dual_chamber__c</fullName>
        <label>CRM: % of LV-Trad that is dual chamber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>To which quarter do these numbers relate?</description>
        <inlineHelpText>To which quarter do these numbers relate?</inlineHelpText>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCCRTDBSXShare__c</fullName>
        <label>CRM: RC - CRT D BSX % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCCRTDBTKShare__c</fullName>
        <label>CRM: RC - CRT D BTK % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCCRTDMDTShare__c</fullName>
        <label>CRM: RC - CRT D MDT % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCCRTDSJMShare__c</fullName>
        <label>CRM: RC - CRT D SJM % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCCharge_for_Remote_Care__c</fullName>
        <label>CRM: RC - Charge for Remote Care?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate and invoicable with device at implant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCHVTradBSXShare__c</fullName>
        <label>CRM: RC - HV Trad BSX % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCHVTradBTKShare__c</fullName>
        <label>CRM: RC - HV Trad BTK % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCLVBSXShare__c</fullName>
        <label>CRM: RC - LV BSX % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCLVBTKShare__c</fullName>
        <label>CRM: RC - LV BTK % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCLVMDTShare__c</fullName>
        <label>CRM: RC - LV MDT % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCLVSJMShare__c</fullName>
        <label>CRM: RC - LV SJM % Share</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCTradMDTShare__c</fullName>
        <label>CRM: RC - Trad MDT % Share</label>
        <picklist>
            <picklistValues>
                <fullName>%0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCTradSJMShare__c</fullName>
        <label>CRM: RC - Trad SJM % Share</label>
        <picklist>
            <picklistValues>
                <fullName>%0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCmandatoryrequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM: RC - Mandatory / required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SJMIrriAdvAblationCatheters__c</fullName>
        <label>AF: SJM Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SJMStandardAblationCatheters__c</fullName>
        <label>AF: SJM Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SJM_Irri_Adv_Ablation_Catheter_Share__c</fullName>
        <formula>SJMIrriAdvAblationCatheters__c / Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: SJM Irri/Adv Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Standard_Ablation_Catheters_Share__c</fullName>
        <formula>SJMStandardAblationCatheters__c  /  Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: SJM Standard Abl Catheters % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tender_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tender account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Ablations__c</fullName>
        <formula>VTAblations__c +
 AFAblations__c +
 NonAFVTAblations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Total Ablations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Irri_Adv_Ablation_Catheters__c</fullName>
        <formula>SJMIrriAdvAblationCatheters__c +
 BSXIrriAdvAblationCatheters__c +
 BardIrriAdvAblationCatheters__c +
 MDTCryoIrriAdvAblationCatheters__c +
 Abl_Frontiers_Irri_Adv_Ablation_Catheter__c +
 MDTOtherIrriAdvAblationCatheters__c +
 JJIrriAdvAblationCatheters__c+ 
 OtherIrriAdvAblationCatheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Total Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Procedures__c</fullName>
        <formula>NavXProcedures__c +
 ArrayProcedures__c +
  CartoProcedures__c  +
 OtherProcedures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Total Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Standard_Ablation_Catheters__c</fullName>
        <formula>SJMStandardAblationCatheters__c +
 JJStandardAblationCatheters__c +
 BSXStandardAblationCatheters__c +
 BardStandardAblationCatheters__c +
 MDTStandardAblationCatheters__c +
 Abl_Frontiers_Standard_Ablation_Catheter__c +
 BiotronikStandardAblationCatheters__c +
 OtherStandardAblationCatheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Total Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VTAblations__c</fullName>
        <label>AF: # VT Ablations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofICEprocedures__c</fullName>
        <label>AF: # of ICE procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_AF_ablations_with_PV_Mapping_caths__c</fullName>
        <label>AF: %  AF ablations with PV Map caths</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>practicingEPphysicians__c</fullName>
        <label>AF: # practicing EP physicians</label>
        <picklist>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AQMEN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Facility__c</columns>
        <columns>Quarter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinates>ANZ_SJM_Administrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AQ-{000000}</displayFormat>
        <label>AQMEN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AQMEN</pluralLabel>
    <recordTypes>
        <fullName>AQMen_AF</fullName>
        <active>true</active>
        <description>Used for entering AF AQMen data</description>
        <label>AQMen AF</label>
    </recordTypes>
    <recordTypes>
        <fullName>AQMen_CRM</fullName>
        <active>true</active>
        <description>Used for entering CRM AQMen data</description>
        <label>AQMen CRM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>